// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldBase default: internal 1`] = `
FieldBase {
  Symbol(internal): Object {
    "args": Map {
      "demoARG" => ObjectTypeField {
        Symbol(internal): Object {
          "kind": "input",
          "multiplicity": "one",
          "name": "demoARG",
          "type": "string",
        },
        Symbol(metadata): Object {
          "required": false,
        },
      },
    },
    "idKey": EntityReference {
      Symbol(internal): Object {
        "entity": "B",
        "field": "fieldName",
      },
      Symbol(metadata): Object {},
    },
    "inheritedFrom": "_B",
    "name": "fieldName",
  },
  Symbol(metadata): Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "entity": "B",
    "order": 1,
    "persistence": Object {
      "derived": true,
      "identity": true,
      "indexed": true,
      "persistent": true,
      "required": true,
    },
  },
}
`;

exports[`FieldBase default: toObject clean 1`] = `
Object {
  "args": Object {
    "demoARG": Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "one",
      "name": "demoARG",
      "title": undefined,
      "type": "string",
    },
  },
  "description": undefined,
  "inheritedFrom": "_B",
  "metadata": Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "entity": "B",
    "order": 1,
    "persistence": Object {
      "derived": true,
      "identity": true,
      "indexed": true,
      "persistent": true,
      "required": true,
    },
  },
  "name": "fieldName",
  "title": undefined,
}
`;

exports[`FieldBase identity make indexed: identity 1`] = `
FieldBase {
  Symbol(internal): Object {
    "args": Map {},
    "idKey": EntityReference {
      Symbol(internal): Object {
        "entity": "FAKE",
        "field": "field",
      },
      Symbol(metadata): Object {},
    },
    "name": "field",
  },
  Symbol(metadata): Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "persistence": Object {
      "derived": false,
      "identity": true,
      "indexed": true,
      "persistent": true,
      "required": true,
    },
  },
}
`;
